Revert "Исправлен Dockerfile и ingress"
This reverts commit 5a842f4eabf9cc69b8a68164829702d5b9b9bf6c.