@@ -1,37 +1,6 @@
-#FROM eclipse-temurin:21-jre-alpine
-#COPY target/client-create-service-0.0.1-SNAPSHOT.jar /app.jar
-#ENTRYPOINT ["java", "-jar", "/app.jar"]
+FROM alpine:3.20
 
-FROM openjdk:17-alpine AS builder
+RUN apk add openjdk17
+COPY target/client-create-service-0.0.1-SNAPSHOT.jar /app.jar
 
-RUN apk add --no-cache binutils
-
-RUN $JAVA_HOME/bin/jlink \
-    --verbose \
-    --add-modules ALL-MODULE-PATH \
-    --strip-debug \
-    --no-man-pages \
-    --no-header-files \
-    --compress=2 \
-    --output /customjre
-
-FROM alpine:latest
-
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
-COPY --from=builder /customjre $JAVA_HOME
-
-ARG APPLICATION_USER=appuser
-RUN adduser --no-create-home -u 1000 -D $APPLICATION_USER
-
-RUN mkdir /app && \
-    chown -R $APPLICATION_USER /app
-
-USER 1000
-
-COPY --chown=1000:1000 target/client-create-service-0.0.1-SNAPSHOT.jar /app/app.jar
-
-WORKDIR /app
-
-ENTRYPOINT ["/jre/bin/java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar"]
